# ledgerloop

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/memory/: project_store.json
docs/: BACKLOG.md  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  loop-orchestrator-functional-spec.md  spec-audit.md
src/orchestrator/: __init__.py  __main__.py  artifacts.py  budget.py  cli.py  config.py  events.py  loop.py  memory.py  plan.py  prompts.py  providers.py  router.py  safety.py  sqlite_store.py
tests/: test_budget.py  test_cli.py  test_config.py  test_loop.py  test_memory.py  test_plan.py  test_prompts.py  test_providers.py  test_router.py  test_safety.py  test_sqlite_store.py
